Fixed header on mobile

--- a/resources/css/sass/pages/_header.scss
+++ b/resources/css/sass/pages/_header.scss
@@ -205,9 +205,9 @@
 
         h1 {
             font-family: "Helvetica Neue";
-            font-size: 20px;
+            font-size: 18px;
             text-transform: uppercase;
-            margin-top: 8px;
+            margin-top: 6px;
         }
     }
 }
